--- a/style.css
+++ b/style.css
@@ -1,31 +1,103 @@
- @font-face { font-family: JetBrains Mono; src: url('assets/fonts/JetBrainsMono-Regular.ttf'); } 
-
- @font-face { font-family: JetBrains Mono; font-weight: bold; src: url('assets/fonts/JetBrainsMono-Bold.ttf');}
-
-
-*{
-    font-family: 'JetBrains Mono', monospace;
+@font-face {
+  font-family: JetBrains Mono;
+  src: url("assets/fonts/JetBrainsMono-Regular.ttf");
 }
 
-h1{
-    font-size: 1rem;
-    text-transform: uppercase;
+@font-face {
+  font-family: JetBrains Mono;
+  font-weight: bold;
+  src: url("assets/fonts/JetBrainsMono-Bold.ttf");
 }
 
-header{
-    margin: 3rem;
-    display: flex;
-    justify-content: space-between;
+* {
+  font-family: "JetBrains Mono", monospace;
+}
+
+:root {
+    --white: #fff;
+  --darktext: #222;
+  --lighttext: #777;
+  --lightgray: #f1f1f1;
+  --darkgray: #d9d9d9
+}
+
+h1 {
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+header {
+    color: var(--darktext);
+  margin: 3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 header button {
-    color: #222;
-    font-family: JetBrains Mono;
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-decoration-line: underline;
-    background-color: transparent;
-    border: 0;
+  font-family: JetBrains Mono;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  background-color: transparent;
+  border: 2px solid var(--lightgray);
+  border-radius: 0.45rem;
+  padding: 0.25rem 0.75rem;
+  cursor: pointer;
+}
+
+header button:hover {
+  background-color: var(--lightgray);
+}
+header button:active {
+  background-color: var(--darkgray);
+  border: 2px solid var(--darkgray);
+}
+
+header input{
+    display: none;
+}
+
+.invert {
+    background-color: var(--darktext);
+    color: var(--white);
+}
+
+.invert:hover {
+    background-color: var(--darktext);
+    color: var(--white);
+}
+.invert:active {
+    background-color: var(--darktext);
+    color: var(--white);
+}
+
+.intro{
+    max-width: 40rem;
+    margin: 0 auto;
+}
+
+.intro p {
+    color: var(--lighttext);
+  text-align: center;
+  font-family: JetBrains Mono;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 135%; 
+}
+
+.intro #message{
+    display: flex;
+    padding: 3rem 1rem;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    background-color: aquamarine;
+}
+
+@media only screen and (max-width: 640px) {
+  header {
+    margin: 1rem;
+  }
 }
