--- a/style.css
+++ b/style.css
@@ -35,44 +35,43 @@ header {
 
 header button {
     width: 6rem;
-    transition: .3s all ease-out;
-    font-family: JetBrains Mono;
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    background-color: transparent;
-    border: 2px solid var(--lightgray);
     border-radius: 0.45rem;
     padding: 0.25rem 0.75rem;
+    transition: .3s all ease-out;
+    font-weight: 500;
+    font-size: 0.875rem;
+    font-style: normal;
+    line-height: normal;
     cursor: pointer;
 }
 
-header button:hover {
+.btn-idle {
+    background-color: transparent;
+    border: 2px solid var(--lightgray);
+}
+
+btn-idle:hover {
     background-color: var(--lightgray);
 }
 
-header button:active {
+btn-idle:active {
     background-color: var(--darkgray);
     border: 2px solid var(--darkgray);
 }
 
-header input {
-    display: none;
-}
 
-.invert {
+.btn-active {
     transition: .3s all ease-out;
     background-color: var(--darktext) !important;
     color: var(--white) !important;
 }
 
-.invert:hover {
+.btn-active:hover {
     background-color: var(--darktext) !important;
     color: var(--white) !important;
 }
 
-.invert:active {
+.btn-active:active {
     background-color: var(--darktext) !important;
     color: var(--white) !important;
 }
@@ -85,7 +84,6 @@ header input {
 .intro p {
     color: var(--lighttext);
     text-align: center;
-    font-family: JetBrains Mono;
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 400;
@@ -99,6 +97,22 @@ header input {
     align-items: center;
     align-self: stretch;
 }
+
+
+footer {
+    font-size: .5rem;
+    position: fixed;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+}
+
+footer a:hover {
+    color: var(--lighttext);
+}
+
 
 @media only screen and (max-width: 640px) {
     header {
