--- a/style.css
+++ b/style.css
@@ -5,14 +5,19 @@
 
 @font-face {
     font-family: JetBrains Mono;
-    font-weight: bold;
+    font-weight: 600;
     src: url("assets/fonts/JetBrainsMono-Bold.ttf");
 }
 
-* {
-    font-family: "JetBrains Mono", monospace;
-    margin-block-end: 0;
-    margin-block-start: 0;
+@font-face {
+    font-family: Inter;
+    font-weight: 500;
+    src: url("assets/fonts/Inter-SemiBold.woff");
+}
+
+
+*{
+    font-family: JetBrains Mono;
 }
 
 body,
@@ -31,6 +36,10 @@ footer {
     --darkgray: #d9d9d9
 }
 
+body {
+    min-height: 100vh;
+}
+
 a {
     text-decoration: none;
     cursor: pointer;
@@ -38,7 +47,16 @@ a {
 }
 
 h1 {
-    font-size: 0.875rem;
+    font-family: 'Inter';
+    font-size: 1.4rem;
+    line-height: 1.45;
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+}
+
+h2 {
+    font-size: 0.75rem;
     font-weight: 700;
     text-transform: uppercase;
 }
@@ -54,7 +72,7 @@ header {
 #squiggle {
     border: 1px solid var(--lightgray);
     cursor: none;
-    border-radius: 1.2rem;
+    border-radius: 1.25rem;
     overflow: hidden;
 
 }
@@ -94,7 +112,7 @@ header {
     line-height: 24px;
     cursor: pointer;
     transition: all .33s ease-out;
-    font-size: 0.875rem;
+    font-size: 0.9rem;
 }
 
 .toggle+label:before {
@@ -111,8 +129,8 @@ header {
 .toggle+label:after {
     content: "";
     position: absolute;
-    top: 2px;
-    bottom: 1px;
+    top: 3px;
+    bottom: 3px;
     left: 3px;
     width: 18px;
     height: 18px;
@@ -138,7 +156,7 @@ header {
     gap: 2rem;
     flex-direction: column;
     max-width: 40rem;
-    margin: 3rem auto;
+    margin: 4rem auto;
     animation: fade-in 1.2s ease-out;
 }
 
@@ -154,35 +172,33 @@ header {
     }
 }
 
-.intro p {
-    font-size: 0.875rem;
+
+.textbox {
+    font-size: 0.9rem;
     font-style: normal;
     font-weight: 400;
     line-height: 145%;
-}
-
-
-.intro #message {
-    padding: 0;
-}
-
-.intro a:hover {
-    color: var(--darktext);
+    border-radius: 1.2rem;
+    display: flex;
+    gap: .75rem;
+    flex-direction: column;
+    margin: 1rem 0 0 0;
 }
 
 footer {
-    font-size: .6rem;
-    position: fixed;
-    bottom: 1rem;
-    left: 0;
-    right: 0;
+    font-size: 0.9rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 145%;
+    border-radius: 1.2rem;
     display: flex;
-    justify-content: center;
-    display: flex;
-    gap: 2rem;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 2rem 0 2rem 0;
 }
 
-footer a:hover {
+
+.intro a:hover {
     color: var(--darktext);
 }
 
