--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h1 {
 }
 
 h2 {
-    font-size: 0.75rem;
+    font-size: 0.9rem;
     font-weight: 700;
     text-transform: uppercase;
 }
@@ -65,6 +65,7 @@ header {
     color: var(--darktext);
     margin: 1rem 2rem;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -108,8 +109,8 @@ header {
     --toggle-color: var(--white);
     --toggle-bg-color: var(--darkgray);
     position: relative;
-    padding-left: 3.25rem;
-    line-height: 24px;
+    padding-left: 4rem;
+    line-height: 28px;
     cursor: pointer;
     transition: all .33s ease-out;
     font-size: 0.9rem;
@@ -120,8 +121,8 @@ header {
     box-sizing: border-box;
     position: absolute;
     left: 0;
-    width: 40px;
-    height: 24px;
+    width: 46px;
+    height: 28px;
     border-radius: 1.25rem;
     background-color: var(--toggle-bg-color);
 }
@@ -129,11 +130,11 @@ header {
 .toggle+label:after {
     content: "";
     position: absolute;
-    top: 3px;
-    bottom: 3px;
-    left: 3px;
-    width: 18px;
-    height: 18px;
+    top: 2px;
+    bottom: 2px;
+    left: 2px;
+    width: 24px;
+    height: 24px;
     margin: auto;
     transform: translate(0, 0);
     border-radius: 50%;
@@ -147,7 +148,7 @@ header {
 }
 
 .toggle:checked+label:after {
-    transform: translate(16px, 0);
+    transform: translate(18px, 0);
 }
 
 
@@ -182,7 +183,7 @@ header {
     display: flex;
     gap: .75rem;
     flex-direction: column;
-    margin: 1rem 0 0 0;
+    margin: 0;
 }
 
 footer {
@@ -205,7 +206,7 @@ footer {
 @media only screen and (max-width: 840px) {
 
     header {
-        margin: 2rem 1rem;
+        margin: 1rem 1rem;
     }
 
     .intro {
