--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-size: 0.9rem;
 }
 
 
@@ -109,7 +110,7 @@ header {
     --toggle-color: var(--white);
     --toggle-bg-color: var(--darkgray);
     position: relative;
-    padding-left: 3.4rem;
+    padding-left: 56px;
     line-height: 28px;
     cursor: pointer;
     transition: all .33s ease-out;
@@ -129,8 +130,8 @@ header {
 .toggle+label:after {
     content: "";
     position: absolute;
-    top: 2px;
-    bottom: 2px;
+    top: 3px;
+    bottom: 3px;
     left: 2px;
     width: 24px;
     height: 24px;
